Changed FXS Docs

--- a/document-archive-forms.html
+++ b/document-archive-forms.html
@@ -421,12 +421,12 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<div id="hmpagebody">
 	<div id="hmpagebody_scroller">
 <!--ZOOMRESTART--> 
-	<p class="p_Normal">The visibility of document archive functionalities across Dynamics 365 can be configured in this screen.</p>
+	<p class="p_Normal"><span style="font-weight: bold;">The visibility of document archive functionalities across Dynamics 365 can be configured in this screen.</span></p>
 <p class="p_Normal">Toggling the different forms between an active/inactive state controls, whether a &quot;Document Archive&quot; section is displayed in the overhead menu in the respective Dynamics 365 screens. <br />
 The menu always includes a link to the archive viewer as well as the &quot;Add file&quot; functionality to add external files. </p>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Add file</span></h2>
-<p class="p_Normal">The functionality of &quot;Add file&quot; can be configured for each form separately. Each metadata element can be made visible and editable individually. </p>
+<p class="p_Normal">The functionality of &quot;Add file&quot; can be configured for each form separately. Each meta data element can be made visible and editable individually. </p>
 <div class="p_Normal"><img alt="clip1134" style="width:100%;max-width:1404px;height:auto;border:none" src="./images/clip1134.png"/></div>
 
 	<footer class="topicfooter">
