--- a/installation.html
+++ b/installation.html
@@ -422,7 +422,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<div id="hmpagebody_scroller">
 <!--ZOOMRESTART--> 
 	<p class="p_Normal">FlexxStore for Dynamics 365 Finance &amp; SCM has to be imported into Microsoft Dynamics Lifecycle services (LCS) as a deployable package.</p>
-<p class="p_Normal">LCS enables you to deploy &nbsp;modules to the desired Dynamics 365 environments.</p>
+<p class="p_Normal">LCS enables you to deploy modules to the desired Dynamics 365 environments.</p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">Please follow the instructions from Microsoft Lifecycle Services to import and deploy the FlexxStore modules to Dynamics 365 environments.</p>
 <p class="p_Normal"><a href="https://docs.microsoft.com/en-us/dynamics365/unified-operations/dev-itpro/deployment/apply-deployable-package-system" target="_blank" class="weblink">Microsoft Lifecycle services instructions</a></p>
