--- a/lasernet-document-archive-over.html
+++ b/lasernet-document-archive-over.html
@@ -427,15 +427,15 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal"><span style="font-weight: bold;">Please navigate to the desired section in this manual:</span></p>
 <p class="p_Normal"><a href="archive-viewer.html" class="topiclink hmlinklistitem">Archive Viewer</a></p>
 <p class="p_Normal"><a href="external-documents.html" class="topiclink hmlinklistitem">External documents</a></p>
-<p class="p_Normal">   <a href="attach-file.html" class="topiclink hmlinklistitem">Add file</a></p>
+<p class="p_Normal">   <a href="add-file.html" class="topiclink hmlinklistitem">Add file</a></p>
 <p class="p_Normal">   <a href="add-with-cover-sheet.html" class="topiclink hmlinklistitem">Add with Cover sheet</a></p>
 <p class="p_Normal">Setup</p>
 <p class="p_Normal">   <a href="installation.html" class="topiclink hmlinklistitem">Installation</a></p>
+<p class="p_Normal">   <a href="connections2.html" class="topiclink hmlinklistitem">Connections</a></p>
 <p class="p_Normal">   <a href="parameters.html" class="topiclink hmlinklistitem">Parameters</a></p>
 <p class="p_Normal">   <a href="internal-documents.html" class="topiclink hmlinklistitem">Internal documents</a></p>
 <p class="p_Normal">   <a href="external-documents2.html" class="topiclink hmlinklistitem">External documents</a></p>
 <p class="p_Normal">   <a href="document-archive-forms.html" class="topiclink hmlinklistitem">Document archive forms</a></p>
-<p class="p_Normal">   <a href="connections2.html" class="topiclink hmlinklistitem">Connections</a></p>
 
 	<footer class="topicfooter">
 <p class="topicfooter">© Soluvine GmbH</p>
