--- a/archive-viewer.html
+++ b/archive-viewer.html
@@ -421,10 +421,16 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<div id="hmpagebody">
 	<div id="hmpagebody_scroller">
 <!--ZOOMRESTART--> 
-	<p class="p_Normal">The archive viewer acts as the central place to view files archived via Dynamics 365 Finance &amp; SCM.</p>
-<p class="p_Normal">It can be opened directly via &quot;Document Archive =&gt; Archive Viewer&quot;, showing a list of all documents in the document archive. &nbsp;Additionally, the archive viewer can be opened by using the &quot;Document Archive&quot; menu functions enabled in different locations in D365. In that case, only related documents to the currently selected business case are shown to the user.</p>
+	<p class="p_Normal"><span style="font-weight: bold;">The archive viewer acts as the central place to view files archived via Dynamics 365 Finance &amp; SCM.</span></p>
+<h2 class="p_Heading2"><span class="f_Heading2">Getting to the Archive Viewer</span></h2>
+<h3 class="p_Heading3"><span class="f_Heading3">Direct access via Document Archive</span></h3>
+<p class="p_Normal">The archive viewer can be opened directly via &quot;Document Archive &gt; Archive Viewer&quot;. In this case, the viewer shows a list of all documents in the document archive. Using the available filters, document hierarchy and search functions, users can manually search for documents based on available meta data. </p>
 <p class="p_Normal">&nbsp;</p>
-<div class="p_Normal"><img alt="clip1136" style="width:100%;max-width:2311px;height:auto;border:none" src="./images/clip1136.png"/></div>
+<h3 class="p_Heading3"><span class="f_Heading3">Context-based access via business process</span></h3>
+<p class="p_Normal">Additionally, the archive viewer can be opened by using the &quot;Document Archive&quot; menu functions enabled in different locations in Dynamics 365. (Configuration see <a href="document-archive-forms.html" class="topiclink">here</a>)<br />
+In that case, only documents relevant to the context of the the currently selected business case are shown to the user.</p>
+<p class="p_Normal">&nbsp;</p>
+<div class="p_Normal"><img alt="clip1138" style="width:100%;max-width:2261px;height:auto;border:none" src="./images/clip1138.png"/></div>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Core functionality</span></h2>
 <h3 class="p_Heading3"><span class="f_Heading3">Document Hierarchy</span></h3>
@@ -433,21 +439,19 @@ Depending on the actively used document types, rights of the individual user and
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Documents</span></h3>
 <p class="p_Normal">A list of documents is shown to the user based on different filters. Users can use the document hierarchy to filter documents according to their type. <br />
-At the same time, the Search bar on top can be used to filter by different metadata. Cover sheet entries can be hidden or shown in the screen.</p>
+At the same time, the Search bar on top can be used to filter by different meta data. Cover sheet entries can be hidden or shown in the screen.</p>
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Preview</span></h3>
-<p class="p_Normal">The preview shows specific files types to the user. This includes .pdf, .jpg and .png. Msg-file types are not previewed in here.</p>
+<p class="p_Normal">The preview shows specific file types to the user directly within Dynamics 365. For file types that are not supported by the viewer, a download-button is available for local viewing. </p>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Additional functionality</span></h2>
-<h3 class="p_Heading3"><span class="f_Heading3">Add file</span></h3>
-<p class="p_Normal">Add file opens the &quot;Add file&quot; sidebar and allows for adding of external documents to the archive. For details, please see &quot;Add File&quot;.</p>
-<p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Functions</span></h3>
+<p class="p_Normal"><span style="font-weight: bold;">Add file: O</span>pens the &quot;Add file&quot; sidebar and allows for adding of external documents to the archive. For details, please see &quot;<a href="add-file.html" class="topiclink">Add File</a>&quot;.</p>
 <p class="p_Normal"><span style="font-weight: bold;">Assign:</span> Enables the user to assign a document to an additional business case while keeping the connection to all other business cases. </p>
 <p class="p_Normal"><span style="font-weight: bold;">Adjust: </span>Enables the user to assign the document to another business case, thereby removing any prior connections to other business cases.</p>
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Document &gt; Open</span></h3>
-<p class="p_Normal">For file types that cannot be previewed (e.g. .msg), this function enables a download of the file for local file viewing.</p>
+<p class="p_Normal">For file types that cannot be previewed, this function enables a download of the file for local file viewing.</p>
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Hide Preview</span></h3>
 <p class="p_Normal">Hides the document preview on the right hand side.</p>
