--- a/archive-viewer.html
+++ b/archive-viewer.html
@@ -429,24 +429,25 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <h3 class="p_Heading3"><span class="f_Heading3">Context-based access via business process</span></h3>
 <p class="p_Normal">Additionally, the archive viewer can be opened by using the &quot;Document Archive&quot; menu functions enabled in different locations in Dynamics 365. (Configuration see <a href="document-archive-forms.html" class="topiclink">here</a>)<br />
 In that case, only documents relevant to the context of the the currently selected business case are shown to the user.</p>
+<div class="p_Normal"><img alt="ArchiveViewerNew" style="width:100%;max-width:2261px;height:auto;border:none" src="./images/archiveviewernew.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<div class="p_Normal"><img alt="clip1138" style="width:100%;max-width:2261px;height:auto;border:none" src="./images/clip1138.png"/></div>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Core functionality</span></h2>
 <h3 class="p_Heading3"><span class="f_Heading3">Document Hierarchy</span></h3>
 <p class="p_Normal">The document hierarchy enables the viewing and filtering of documents according to their document type. <br />
-Depending on the actively used document types, rights of the individual user and available documents, the hierarchy is flexibly generated. </p>
+Depending on the actively used document types, rights of the individual user and available documents, the hierarchy is flexibly generated. <br />
+At the same time, the Search bar on top can be used to filter by different meta data.</p>
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Documents</span></h3>
 <p class="p_Normal">A list of documents is shown to the user based on different filters. Users can use the document hierarchy to filter documents according to their type. <br />
-At the same time, the Search bar on top can be used to filter by different meta data. Cover sheet entries can be hidden or shown in the screen.</p>
+All available meta data for a document is displayed at the bottom of the screen. </p>
 <p class="p_Normal">&nbsp;</p>
 <h3 class="p_Heading3"><span class="f_Heading3">Preview</span></h3>
 <p class="p_Normal">The preview shows specific file types to the user directly within Dynamics 365. For file types that are not supported by the viewer, a download-button is available for local viewing. </p>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Additional functionality</span></h2>
-<h3 class="p_Heading3"><span class="f_Heading3">Functions</span></h3>
-<p class="p_Normal"><span style="font-weight: bold;">Add file: O</span>pens the &quot;Add file&quot; sidebar and allows for adding of external documents to the archive. For details, please see &quot;<a href="add-file.html" class="topiclink">Add File</a>&quot;.</p>
+<h3 class="p_Heading3"><span class="f_Heading3">Functions (available depending on configuration)</span></h3>
+<p class="p_Normal"><span style="font-weight: bold;">Add file: </span>Opens the &quot;Add file&quot; sidebar and allows for adding of external documents to the archive. For details, please see &quot;<a href="add-file.html" class="topiclink">Add File</a>&quot;.</p>
 <p class="p_Normal"><span style="font-weight: bold;">Assign:</span> Enables the user to assign a document to an additional business case while keeping the connection to all other business cases. </p>
 <p class="p_Normal"><span style="font-weight: bold;">Adjust: </span>Enables the user to assign the document to another business case, thereby removing any prior connections to other business cases.</p>
 <p class="p_Normal">&nbsp;</p>
