--- a/document-log.html
+++ b/document-log.html
@@ -427,14 +427,15 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">Document log overview:</p>
 <div class="p_Normal"><img alt="clip0087" style="width:100%;max-width:1599px;height:auto;border:none" src="./images/clip0087.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Action button pane: </p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Action button pane</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Edit: not used.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Open reference: opens the reference in the Integration jobs related to the processed document.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Document: opens the referenced document indicated in the Document reference and Document columns.</p>
-<p class="p_Normal">2. Filter text box: &nbsp;type the text to find and select one of the suggested columns to search through. See example below:</p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Filter text box</span></p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Type the text to find and select one of the suggested columns to search through. See example below:</p>
 <p class="p_Normal"><img alt="clip0088" style="margin:0;width:14.0625rem;height:11.5000rem;border:none" src="./images/clip0088.png"/></p>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">3. List of documents:</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">List of documents</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Date: date and time when the job has been finished or journal entry created.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Reference: source of the record.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Integration jobs: the entry originating from the Integration jobs and referring to the reception or sending out a document.</p>
