--- a/integration-monitor.html
+++ b/integration-monitor.html
@@ -423,10 +423,10 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <!--ZOOMRESTART--> 
 	<p class="p_Normal">Integration monitor provides a workspace for monitoring the history of jobs processed by the interfaces and quick access to the configuration of FlexxLink.</p>
 <p class="p_Normal">Integration monitor provides the following workspace:</p>
-<div class="p_Normal"><img alt="clip0122" style="width:100%;max-width:1517px;height:auto;border:none" src="./images/clip0122.png"/></div>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0005" style="margin:0;width:75.8750rem;height:27.3750rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0005.png"/></p>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Integration jobs: link to Integration jobs workspace.</p>
-<p class="p_Normal">2. Errors: display overview of all jobs processed by FlexxLink interfaces. Link icon displays the number of jobs the ended in Error status.</p>
+<p class="p_Normal">1. Errors: Display overview of all jobs processed by FlexxLink interfaces that ended in Error status.</p>
+<p class="p_Normal">2. Processed: Display overview of all jobs processed by FlexxLink interfaces that ended in Processed status.</p>
 <p class="p_Normal">3. Job history: List of all jobs processed by FlexxLink interfaces. </p>
 <p class="p_Normal">4. Group tabs: Tabs listing jobs grouped by a specific time period. </p>
 <p class="p_Normal">5. List of jobs: the list of all jobs within a specific time period as selected on the tab. The following information is displayed:</p>
@@ -436,9 +436,10 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Status: information on the status of the integration job.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Company: legal entity ID for which the job has been imported.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Created date and time: time and date when the job has been received by the interface.</p>
-<p class="p_Normal">6. Interfaces: List of all active and inactive interfaces</p>
-<p class="p_Normal">7. Report: Lasernet report showing details to integration monitor</p>
-<p class="p_Normal">8. Parameters: Link to configuration of EDI Parameters </p>
+<p class="p_Normal">6. Interfaces: List of all active and inactive interfaces.</p>
+<p class="p_Normal">7. Integration jobs: Quick link to Integration jobs workspace.</p>
+<p class="p_Normal">8. Parameters: Link to configuration of FlexxLink Parameters.</p>
+<p class="p_Normal">9. Report: Report showing details to Integration monitor.</p>
 <p class="p_Normal">&nbsp;</p>
 
 	<footer class="topicfooter">
