--- a/interfaces2.html
+++ b/interfaces2.html
@@ -449,7 +449,8 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Outbound interfaces:</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Processing class name: name of the D365 class which defines how the message is processed by the interface.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Target: system that will receive the messages from this interface. This value is inherited from the Processing class code.</p>
-<p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Report name: name of the Lasernet report that generates the XML message that will be sent out by the interface. Use the table below to set up the correct report:</p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Document generator: select if FlexxLink should use Default or Lasernet generator to build messages.</p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Report name: NOTE: Applicable only when Lasernet document generator is used. Name of the Lasernet report that generates the XML message that will be sent out by the interface. Use the table below to set up the correct report:</p>
 <div style="text-align: left; text-indent: 0; line-height: 1.38; padding: 0 0 0 0; margin: 0.6250rem 0 0 0;"><table style="border:solid 0.1250rem #808080; border-spacing:0; border-collapse:collapse;">
 <thead>
 <tr>
