--- a/ocr-invoice-processing.html
+++ b/ocr-invoice-processing.html
@@ -426,13 +426,16 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">OCR Invoice processing workspace overview:</p>
 <div class="p_Normal"><img alt="clip0108" style="width:100%;max-width:1657px;height:auto;border:none" src="./images/clip0108.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Summary: number of import jobs in the OCR Invoice processing interface calculated by status.</p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Summary</span></p>
+<p class="p_Normal"> &nbsp; &nbsp;Number of import jobs in the OCR Invoice processing interface calculated by status.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Parameters: link to FlexxLink Parameters configuration.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Import labels: link to FlexxLink Import labels list.</p>
-<p class="p_Normal">2. Vendor invoices: click the status tab to display all the invoices in the selected status. The documents are displayed in the list on the right.</p>
-<p class="p_Normal">3. Filter: type the text to find and select one of the suggested columns to search through.</p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Vendor invoices</span> </p>
+<p class="p_Normal"> &nbsp; &nbsp;Click the status tab to display all the invoices in the selected status. The documents are displayed in the list on the right.</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">Filter</span> </p>
+<p class="p_Normal"> &nbsp; &nbsp;Type the text to find and select one of the suggested columns to search through.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Edit: click to open the invoice in a dedicated Vendor invoice validation journal entry view.</p>
-<p class="p_Normal">4. List of documents:</p>
+<p class="p_Normal">4. <span style="font-weight: bold;">List of documents</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Label id: a unique label number used during import of the OCR invoice. No value is displayed if label identification has not been used.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Invoice account: Dynamics 365 Finance &amp; SCM account number as identified during import of the OCR invoice.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Invoice date: date of the document as identified during import of the OCR invoice.</p>
