--- a/parameters2.html
+++ b/parameters2.html
@@ -689,7 +689,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">4. License terms.</p>
 <p class="p_Normal">License key needs to be pasted into the License code text box in order to use FlexxLink.</p>
-<p class="p_Normal"><img alt="clip0103" style="margin:0;width:85.0625rem;height:35.9375rem;border:none" src="./images/clip0103.png"/></p>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0009" style="margin:0;width:42.6250rem;height:32.1250rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0009.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">The following information is available for the License:</p>
 <div style="text-align: left; text-indent: 0; line-height: 1.38; padding: 0 0 0 0; margin: 0.6250rem 0 0 0;"><table style="border:solid 0.1250rem #808080; border-spacing:0; border-collapse:collapse;">
@@ -702,6 +702,12 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 </tr>
 </thead>
 <tbody>
+<tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">License code</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Encoded license string. Contact your FlexxLink vendor to obtain the code</p>
+</td>
+</tr>
 <tr>
 <td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Status</p>
 </td>
@@ -717,33 +723,33 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 </td>
 </tr>
 <tr>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Transaction count</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Legal entities - Actual</p>
 </td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of transactions as enabled by the license key.</p>
-</td>
-</tr>
-<tr>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Actual</p>
-</td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Actual number of transactions processed by all FlexxLink interfaces.</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of legal entities where FlexxLink is used.</p>
 </td>
 </tr>
 <tr>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Interface count</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Legal entities - Licensed</p>
 </td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of interfaces as enabled by the license.</p>
-</td>
-</tr>
-<tr>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Actual</p>
-</td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Actual number of active interfaces in FlexxLink.</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of legal entities where FlexxLink can be used as enabled by the License.</p>
 </td>
 </tr>
 <tr>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Active EDI interfaces</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Integration parties - Actual</p>
 </td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Summary report of the interfaces and legal entities active in FlexxLink.</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of Integration parties set up in FlexxLink.</p>
+</td>
+</tr>
+<tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Integration parties - Licensed</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of Integration parties enabled by the License.</p>
+</td>
+</tr>
+<tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Transactions - Actual</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Number of transactions processed in FlexxLink.</p>
 </td>
 </tr>
 </tbody>
