--- a/pending-vendor-invoices.html
+++ b/pending-vendor-invoices.html
@@ -426,7 +426,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">FlexxLink provides the following Pending vendor invoices workspace:</p>
 <div class="p_Normal"><img alt="clip0115" style="width:100%;max-width:1390px;height:auto;border:none" src="./images/clip0115.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. +New: </p>
+<p class="p_Normal">1. +New: create a new vendor invoice in Dynamics 365 Finance &amp; SCM.</p>
 <p class="p_Normal">2. Delete: removes the entry from Pending vendor invoices list. This will permanently remove the invoice record from FlexxLink.</p>
 <p class="p_Normal">3. Edit: opens the invoice for editing and review in Vendor invoice view.</p>
 <p class="p_Normal">4. Filter: provide value to search for a specific invoice entry in the Pending vendor invoices list.</p>
