--- a/sales-processing.html
+++ b/sales-processing.html
@@ -424,15 +424,15 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<p class="p_Normal">This menu provides a summary of Sales interfaces processing. It groups and lists the import jobs by status. Each job can be accessed from the list to review and perform validation in a dedicated Import journal entry view. </p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">Sales processing workspace overview:</p>
-<div class="p_Normal"><img alt="clip0092" style="width:100%;max-width:1626px;height:auto;border:none" src="./images/clip0092.png"/></div>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0001" style="margin:0;width:76.5000rem;height:28.5625rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0001.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.2500rem; margin-left: 0;"><span class="f_Normal" style="display:inline-block;width:1.2500rem;margin-left:-1.2500rem">1.</span><span style="font-weight: bold;">Summary</span> <br />
 Number of import jobs in the Sales interfaces calculated by status.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.2500rem; margin-left: 0;"><span class="f_Normal" style="display:inline-block;width:1.2500rem;margin-left:-1.2500rem">2.</span><span style="font-weight: bold;">Interfaces</span><br />
-Click the status to display all the jobs in the selected status. Jobs are displayed in the list on the right.</p>
+Click the status to display all the jobs within the selected time period. Jobs are displayed in the list on the right.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.2500rem; margin-left: 0;"><span class="f_Normal" style="display:inline-block;width:1.2500rem;margin-left:-1.2500rem">3.</span><span style="font-weight: bold;">Filter</span><br />
 Type the text to find and select one of the suggested columns to search through.</p>
-<p class="p_Normal"><span style="width:3.0000rem;display:inline-block">&nbsp;</span>- Open: click to open the Import job in a dedicated Import validation journal entry view</p>
+<p class="p_Normal"><span style="width:3.0000rem;display:inline-block">&nbsp;</span>- Open: click to open the Import job in a dedicated Import validation journal entry view.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.2500rem; margin-left: 0;"><span class="f_Normal" style="display:inline-block;width:1.2500rem;margin-left:-1.2500rem">4.</span><span style="font-weight: bold;">List of Import journal jobs:</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Import id: a unique identification of an Import journal entry assigned by FlexxLink.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Created date and time: Date and time when the Import journal entry has been created.</p>
@@ -442,6 +442,7 @@ Type the text to find and select one of the suggested columns to search through.
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Update - update an existing document.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved by: &nbsp;User id who approved the Import journal entry.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved date: Date and time when the Import journal entry has been approved.</p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Origin: Indicates the system that sent the document.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">&nbsp;</p>
 
 	<footer class="topicfooter">
