--- a/user-manual.html
+++ b/user-manual.html
@@ -450,7 +450,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">      <a href="sales-order-validation-journal.html" class="topiclink hmlinklistitem">Sales order validation journal</a></p>
 <p class="p_Normal">   <a href="purchase-processing.html" class="topiclink hmlinklistitem">Purchase processing</a></p>
 <p class="p_Normal">      <a href="purchase-order-validation-jour.html" class="topiclink hmlinklistitem">Purchase order validation journal</a></p>
-<p class="p_Normal">   <a href="invoice-processing.html" class="topiclink hmlinklistitem">Invoice processing</a></p>
+<p class="p_Normal">   <a href="invoice-processing.html" class="topiclink hmlinklistitem">Vendor invoice processing</a></p>
 <p class="p_Normal">      <a href="validaiton-journal.html" class="topiclink hmlinklistitem">Validation journal</a></p>
 <p class="p_Normal">   <a href="collection-processing.html" class="topiclink hmlinklistitem">Collection processing</a></p>
 <p class="p_Normal">      <a href="collection-validation-journal.html" class="topiclink hmlinklistitem">Collection validation journal</a></p>
