--- a/vendor-imported-invoices.html
+++ b/vendor-imported-invoices.html
@@ -426,10 +426,14 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">The following list view is available in Vendor imported invoices menu:</p>
 <div class="p_Normal"><img alt="clip0114" style="width:100%;max-width:1108px;height:auto;border:none" src="./images/clip0114.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Edit: opens the selected invoice in the Vendor invoice validation journal. </p>
-<p class="p_Normal">2. Delete: removes the selected invoice from the Vendor imported invoices. This button is disabled if the document has already been posted.</p>
-<p class="p_Normal">3. Filter: provide value to search for a specific invoice entry in the Vendor imported invoices list.</p>
-<p class="p_Normal">4. List of invoices: list of imported invoices from vendors. The list includes all invoices regardless of their status.</p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Edit</span> </p>
+<p class="p_Normal"> &nbsp; &nbsp;Opens the selected invoice in the Vendor invoice validation journal. </p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Delete</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Removes the selected invoice from the Vendor imported invoices. This button is disabled if the document has already been posted.</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">Filter</span></p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Provide value to search for a specific invoice entry in the Vendor imported invoices list.</p>
+<p class="p_Normal">4. <span style="font-weight: bold;">List of invoices</span></p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">List of imported invoices from vendors. The list includes all invoices regardless of their status.</p>
 <p class="p_Normal">&nbsp;</p>
 
 	<footer class="topicfooter">
