--- a/collection-processing.html
+++ b/collection-processing.html
@@ -424,19 +424,23 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<p class="p_Normal">This menu provides a summary of Collection interfaces processing. It groups and lists the import jobs by status. Each job can be accessed from the list to review and perform validation in a dedicated Import journal entry view.</p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">Collection processing workspace overview:</p>
-<div class="p_Normal"><img alt="clip0106" style="width:100%;max-width:1640px;height:auto;border:none" src="./images/clip0106.png"/></div>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0004" style="margin:0;width:67.8750rem;height:21.7500rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0004.png"/></p>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Summary: number of import jobs in the Collection interfaces calculated by status.</p>
-<p class="p_Normal">2. Interfaces: click the status to display all the jobs in the selected status. Jobs are displayed in the list on the right.</p>
-<p class="p_Normal">3. Filter: type the text to find and select one of the suggested columns to search through.</p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Summary</span></p>
+<p class="p_Normal"> &nbsp; &nbsp;Number of import jobs in the Collection interfaces calculated by status.</p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Interfaces</span></p>
+<p class="p_Normal"> &nbsp; &nbsp;Click the status to display all the jobs in the selected time range. Jobs are displayed in the list on the right.</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">Filter</span></p>
+<p class="p_Normal"> &nbsp; &nbsp;Type the text to find and select one of the suggested columns to search through.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Open: click to open the Import job in a dedicated Import validation journal entry view.</p>
-<p class="p_Normal">4. List of Import journal jobs:</p>
+<p class="p_Normal">4. <span style="font-weight: bold;">List of Import journal jobs</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Import id: a unique identification of an Import journal entry assigned by FlexxLink.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Created date and time: Date and time when the Import journal entry has been created.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Action: action performed in the Import journal on the document type. The action is indicated in the data received by the interface.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">By default only 'Confirm' action is set for a document entry.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved by: &nbsp;User id who approved the Import journal entry.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved date: Date and time when the Import journal entry has been approved.</p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Origin: Indicates the system that sent the document.</p>
 
 	<footer class="topicfooter">
 <p class="topicfooter">© Soluvine GmbH</p>
