--- a/integration-party2.html
+++ b/integration-party2.html
@@ -424,7 +424,8 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<p class="p_Normal">Integration party setup defines the inbound and outbound interfaces active for each customer and vendor account. The configuration also allows for additional identification of each customer and vendor, setup of validation profiles and endpoints per interface.</p>
 <p class="p_Normal">In order to send or receive documents from a customer or vendor using FlexxLink in F&amp;O it is necessary to set up the customer/vendor account and define the document interfaces.</p>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">Integration party setup overview: <img alt="clip0074" style="margin:0;width:87.2500rem;height:32.3750rem;border:none" src="./images/clip0074.png"/></p>
+<p class="p_Normal">Integration party setup overview:</p>
+<p class="p_Normal"> <img alt="clip0074" style="margin:0;width:87.2500rem;height:32.3750rem;border:none" src="./images/clip0074.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">1. Edit: click Edit to enable editing of Integration party customer or vendor record. During 'Edit' mode, the button is changed to 'Save'.</p>
 <p class="p_Normal">2. New: click New to create a new empty Integration party record available for configuration.</p>
@@ -470,6 +471,15 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 </td>
 <td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Drop-down list.</p>
 <p class="p_Normal">Selection of account numbers from F&amp;O.</p>
+</td>
+</tr>
+<tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Name</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">As taken from the Account number.</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Non-editable.</p>
+<p class="p_Normal">Name of the Account as set up in Dynamics 365 Finance &amp; SCM.</p>
 </td>
 </tr>
 <tr>
@@ -532,7 +542,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">Inbound</p>
 <p class="p_Normal">This section allows for addition of inbound interfaces for the Integration party.</p>
 <p class="p_Normal">Interfaces can be added or removed using the following buttons:</p>
-<p class="p_Normal"><img alt="clip0076" style="margin:0;width:70.6250rem;height:8.8750rem;border:none" src="./images/clip0076.png"/></p>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0010" style="margin:0;width:55.1250rem;height:8.3125rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0010.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">The following parameters should be set for each inbound interface enabled for an integration party:</p>
 <div style="text-align: left; text-indent: 0; line-height: 1.38; padding: 0 0 0 0; margin: 0.6250rem 0 0 0;"><table style="border:solid 0.1250rem #808080; border-spacing:0; border-collapse:collapse;">
@@ -591,6 +601,14 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">- Barcode: item is identified on the basis of matching the value of the bar code field in the message and the bar codes in Dynamics 365 Finance &amp; SCM.</p>
 </td>
 </tr>
+<tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Use standard unit</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">No</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><br />
+</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -598,7 +616,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">Outbound</p>
 <p class="p_Normal">This section allows for addition of outbound interfaces for the Integration party.</p>
 <p class="p_Normal">Outbound interfaces can be added or removed using the following:</p>
-<p class="p_Normal"><img alt="clip0077" style="margin:0;width:65.6875rem;height:6.4375rem;border:none" src="./images/clip0077.png"/></p>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0011" style="margin:0;width:55.8750rem;height:10.8125rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0011.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">The following parameters should be set for each outbound interface enabled for an integration party:</p>
 <div style="text-align: left; text-indent: 0; line-height: 1.38; padding: 0 0 0 0; margin: 0.6250rem 0 0 0;"><table style="border:solid 0.1250rem #808080; border-spacing:0; border-collapse:collapse;">
@@ -655,11 +673,19 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 </td>
 </tr>
 <tr>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Overwrite GLN code</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">none</p>
+</td>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Use to overwrite for this interface the GLN code specified on the Customer/Vendor account. </p>
+</td>
+</tr>
+<tr>
 <td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Endpoint</p>
 </td>
 <td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">none</p>
 </td>
-<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Specific Endpoint where the outbound document is sent. It overwrites the setting on the Interfaces configuraiton.</p>
+<td style="vertical-align:top; padding:0; border:solid thin #808080;"><p class="p_Normal">Specific Endpoint where the outbound document is sent. It overwrites the setting on the Interfaces configuration.</p>
 </td>
 </tr>
 </tbody>
