--- a/internal-documents.html
+++ b/internal-documents.html
@@ -424,7 +424,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<p class="p_Normal"><span style="font-weight: bold;">Internal documents are generated as an outcome of predefined Dynamics 365 report execution. Both Lasernet and SSRS reports can be archived.</span></p>
 <p class="p_Normal">&nbsp;</p>
 <h2 class="p_Heading2"><span class="f_Heading2">Documents</span></h2>
-<p class="p_Normal">The document archiving solution can archive the following reports:</p>
+<p class="p_Normal">The document archiving solution can archive the following reports out-of-the-box:</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin-left: 0;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Packing slip</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin-left: 0;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Purchase confirmation</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin-left: 0;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Purchase agreement</p>
