--- a/purchase-processing.html
+++ b/purchase-processing.html
@@ -424,13 +424,16 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	<p class="p_Normal">This menu provides a summary of Purchase interfaces processing. It groups and lists the import jobs by status. Each job can be accessed from the list to review and perform validation in a dedicated Import journal entry view.</p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">Purchase processing workspace overview:</p>
-<div class="p_Normal"><img alt="clip0099" style="width:100%;max-width:1626px;height:auto;border:none" src="./images/clip0099.png"/></div>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0002" style="margin:0;width:74.9375rem;height:27.2500rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0002.png"/></p>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Summary: number of import jobs in the Purchase interfaces calculated by status.</p>
-<p class="p_Normal">2. Interfaces: click the status to display all the jobs in the selected status. Jobs are displayed in the list on the right.</p>
-<p class="p_Normal">3. Filter: type the text to find and select one of the suggested columns to search through.</p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Summary</span><br />
+ &nbsp; &nbsp;Number of import jobs in the Purchase interfaces calculated by status.</p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Interfaces</span><br />
+ &nbsp; &nbsp;Click the status to display all the jobs within the selected time period. Jobs are displayed in the list on the right.</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">Filter</span> <br />
+ &nbsp; &nbsp;Type the text to find and select one of the suggested columns to search through.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Open: click to open the Import job in a dedicated Import validation journal entry view.</p>
-<p class="p_Normal">4. List of Import journal jobs:</p>
+<p class="p_Normal">4. <span style="font-weight: bold;">List of Import journal jobs</span></p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Import id: a unique identification of an Import journal entry assigned by FlexxLink.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Created date and time: Date and time when the Import journal entry has been created.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Action: action performed in the Import journal on the document type. The action is indicated in the data received by the interface.</p>
@@ -441,6 +444,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal" style="margin: 0.6250rem 0 0 1.6250rem;">- Invoice - post an invoice for the document.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved by: &nbsp;User id who approved the Import journal entry.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Approved date: Date and time when the Import journal entry has been approved.</p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Origin: Indicates the system that sent the document.</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">&nbsp;</p>
 
 	<footer class="topicfooter">
