--- a/validaiton-journal.html
+++ b/validaiton-journal.html
@@ -398,7 +398,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 	  <tr>
 		<td id="topicheadercell">
 		  <div id="topicheaderwrapper">
-		  <p id="ptopic_breadcrumbs" class="topic_breadcrumbs">Navigation: FlexxLink &gt; <a href="user-manual.html">User manual</a> &gt; Workspaces &gt; <a href="invoice-processing.html">Invoice processing</a></p> 
+		  <p id="ptopic_breadcrumbs" class="topic_breadcrumbs">Navigation: FlexxLink &gt; <a href="user-manual.html">User manual</a> &gt; Workspaces &gt; <a href="invoice-processing.html">Vendor invoice processing</a></p> 
 		  <h1 class="topictitle" title="Validation journal">Validation journal<h1>
 		  </div>
 		</td>
