--- a/validation-profile2.html
+++ b/validation-profile2.html
@@ -425,7 +425,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">FlexxLink allows to add multiple Validation profiles to handle diverse integration and import scenarios, message formats and their contents as well as specific business requirements. A validation profile can be applied to one interface and can have multiple rules.</p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">Validation profile overview:</p>
-<p class="p_Normal"><img alt="clip0086" style="margin:0;width:79.3750rem;height:40.7500rem;border:none" src="./images/clip0086.png"/></p>
+<p class="p_Normal"><img alt="clip-Marcin@DESKTOP-Q2CMVB8-0012" style="margin:0;width:84.2500rem;height:42.6875rem;border:none" src="./images/clip-marcin@desktop-q2cmvb8-0012.png"/></p>
 <p class="p_Normal">&nbsp;</p>
 <p class="p_Normal">1. Action buttons pane:</p>
 <p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">- Edit: click to enter 'Edit' mode. You can adjust rules setup when in 'Edit' mode. Click 'Save' to store the existing setup.</p>
