--- a/vendor-invoice-validation-jour.html
+++ b/vendor-invoice-validation-jour.html
@@ -426,7 +426,7 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal">Vendor invoice validation journal overview:</p>
 <div class="p_Normal"><img alt="clip0110" style="width:100%;max-width:1664px;height:auto;border:none" src="./images/clip0110.png"/></div>
 <p class="p_Normal">&nbsp;</p>
-<p class="p_Normal">1. Action buttons:</p>
+<p class="p_Normal">1. <span style="font-weight: bold;">Action buttons</span></p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>General tab:</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Validate: perform validation using the assigned validation profile Id. Validation can be performed until the document has been posted.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Cancel: click to cancel the journal entry and remove the document from the workspace. NOTE: The document is permanently removed from the Workspace list.</p>
@@ -436,20 +436,26 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Invoice tab:</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Hide/View attachment: toggle to display or hide the document preview (10).</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Attachments: opens a new view with a list of the attachments related to the document entry.</p>
-<p class="p_Normal">2. Show log: click to display internal Dynamics 365 Finance &amp; SCM error thrown during posting. This is a log for errors that had not been covered by the Validation profile. A sample scenario is: Item ID validation has been disabled on the Validation profile but the Item ID does not exist in in D365. This will throw an error during posting and the error will be available in the Log but not part of the Validation results (11).</p>
-<p class="p_Normal">3. Origin: source of the document displayed. On the OCR Invoice processing the value is set to 'OCR Station.'</p>
-<p class="p_Normal">4. Validation profile Id: name of the profile used to validate the contents of the invoice.</p>
-<p class="p_Normal">5. Action: last action performed on the displayed document.</p>
-<p class="p_Normal">6. Status: status of the invoice after validation.</p>
-<p class="p_Normal">7. Attachments: drop-down list including all the attachments related to the displayed invoice.</p>
-<p class="p_Normal">8. Document: </p>
+<p class="p_Normal">2. <span style="font-weight: bold;">Show log</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Click to display internal Dynamics 365 Finance &amp; SCM error thrown during posting. This is a log for errors that had not been covered by the Validation profile. A sample scenario is: Item ID validation has been disabled on the Validation profile but the Item ID does not exist in in D365. This will throw an error during posting and the error will be available in the Log but not part of the Validation results (11).</p>
+<p class="p_Normal">3. <span style="font-weight: bold;">Origin</span></p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Source of the document displayed. On the OCR Invoice processing the value is set to 'OCR Station.'</p>
+<p class="p_Normal">4. <span style="font-weight: bold;">Validation profile Id</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Name of the profile used to validate the contents of the invoice.</p>
+<p class="p_Normal">5. <span style="font-weight: bold;">Action</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Last action performed on the displayed document.</p>
+<p class="p_Normal">6. <span style="font-weight: bold;">Status</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Status of the invoice after validation.</p>
+<p class="p_Normal">7. <span style="font-weight: bold;">Attachments</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Drop-down list including all the attachments related to the displayed invoice.</p>
+<p class="p_Normal">8. Document</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Document Id: identification of the imported document.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Label Id: label number used during import of the invoice. The value is empty if no label Cover page has been used.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Company accounts ID: legal entity in Dynamics 365 Finance &amp; SCM assigned to the invoice during import.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Invoice type:</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>With purchase order.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Without purchase order. </p>
-<p class="p_Normal">9. Invoice: </p>
+<p class="p_Normal">9. <span style="font-weight: bold;">Invoice</span></p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Number: number of the invoice.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Invoice date: date when the invoice was issued.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Invoice account: account number in Dynamics 365 Finance &amp; SCM of the party issuing the invoice.</p>
@@ -462,8 +468,10 @@ hmDevice.pageStylesheet = "./css/hmprojectstyles.css";
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Vendor account: account number of the vendor from the purchase order.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Name: name of the vendor.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>IBAN: IBAN account number.</p>
-<p class="p_Normal">10. Document preview: preview of the processed invoice and related attachments.</p>
-<p class="p_Normal">11. Related information: click to expand and collapse the Validation status and Rejection status information.</p>
+<p class="p_Normal">10. <span style="font-weight: bold;">Document preview</span> </p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Preview of the processed invoice and related attachments.</p>
+<p class="p_Normal">11. <span style="font-weight: bold;">Related information</span></p>
+<p class="p_Normal" style="margin: 0.6250rem 0 0 0.8125rem;">Click to expand and collapse the Validation status and Rejection status information.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Import validation status: &nbsp;list of validated elements and the status of each element validation. By default only validation errors and warnings are displayed on the list. All validation results are displayed when 'Show errors only' box is not checked.</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 0.8125rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: Arial,'Lucida Sans Unicode','Lucida Grande','Lucida Sans';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">&#8226;</span>Rejection: rejection information:</p>
 <p class="p_Normal" style="text-indent: 0; padding-left: 1.6250rem; margin: 0.6250rem 0 0 0.8125rem;"><span class="f_Normal" style="font-family: 'Courier New';display:inline-block;width:0.8125rem;margin-left:-0.8125rem">o</span>Rejected by: user rejecting the document.</p>
